feat: add documentation for Show Opening.
